# graphics-course

./: .gitignore  imgui.ini
common/render_utils/shaders/: quad.frag
common/scene/: SceneManager.cpp  SceneManager.hpp
tasks/: CMakeLists.txt
tasks/grass/: CMakeLists.txt
tasks/grass/grass_renderer/: App.cpp  CMakeLists.txt  GrassRenderer.cpp  GrassRenderer.hpp  Renderer.cpp  TerrainRenderer.cpp  TerrainRenderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp  WorldRendererGui.cpp  WorldRendererGui.hpp
tasks/grass/grass_renderer/shaders/: UniformParams.h  grass.frag  grass.vert  grass_gen.comp  quad.vert  static_mesh.frag  terrain.tese  terrain_perlin.comp  wind_perlin.comp
tasks/imgui/: CMakeLists.txt
tasks/imgui/imgui_terrain_renderer/: App.cpp  App.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp  WorldRendererGui.cpp  WorldRendererGui.hpp
tasks/imgui/imgui_terrain_renderer/shaders/: UniformParams.h  static_mesh.vert  terrain.frag  terrain_perlin.comp
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt
tasks/inflight_frames/shaders/: shadertoy2.frag  shadertoy2.vert
tasks/local_shadertoy1/: App.cpp  App.hpp
tasks/local_shadertoy1/shaders/: toy.comp
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy2/shaders/: shadertoy2.comp  shadertoy2.frag  toy.comp
tasks/many_objects/: CMakeLists.txt
tasks/many_objects/many_objects_baker/: CMakeLists.txt
tasks/many_objects/many_objects_renderer/: App.cpp  CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/particles/: CMakeLists.txt
tasks/particles/particles_renderer/: CMakeLists.txt  Emitter.cpp  Emitter.hpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  WorldRenderer.cpp  WorldRenderer.hpp  WorldRendererGui.cpp  WorldRendererGui.hpp
tasks/particles/particles_renderer/shaders/: UniformParams.h  particle.frag  particle.vert  terrain.frag  terrain.vert
tasks/particles2/: CMakeLists.txt
tasks/particles2/particles2_renderer/: CMakeLists.txt  Emitter.cpp  Emitter.hpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp  WorldRendererGui.cpp  WorldRendererGui.hpp
tasks/particles2/particles2_renderer/shaders/: UniformParams.h  particle.frag  particle.vert  particle_calculate.comp  particle_integrate.comp  particle_sort.comp  particle_spawn.comp  quad.vert  static_mesh.frag  terrain.tesc  terrain.tese
tasks/terrain/: CMakeLists.txt
tasks/terrain/terrain_renderer/: CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/terrain/terrain_renderer/shaders/: perlin_terrain.comp  quad.vert  static_mesh.frag  static_mesh.vert  terrain.frag  terrain.tesc  terrain.tese  terrain_normal.comp  terrain_perlin.comp
